Run with admin rights

--- a/ReCircle.desktop
+++ b/ReCircle.desktop
@@ -2,4 +2,4 @@
 Type=Application
 Name=ReCircle
 #Exec=/usr/bin/python3 /home/pi/RaspiReCircle/ReCircle.py
-Exec=xterm -hold -e '/usr/bin/python3 /home/pi/RaspiReCircle/ReCircle.py'
+Exec=xterm -hold -e 'sudo /usr/bin/python3 /home/pi/RaspiReCircle/ReCircle.py'
